--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -102,7 +102,11 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
-
+@media(max-width: 1024px) {
+    .contact-section {
+        flex-direction: column;
+    }
+}
 @media(max-width: 768px) {
     .contact {
         gap: 50px;
